/*
 * Copyright (c) 2020 gematik GmbH
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *    http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package de.gematik.ti.cardreader.provider.usb.tactivo.control;

import de.gematik.ti.cardreader.provider.api.ICardReaderController;
import de.gematik.ti.cardreader.provider.api.entities.IProviderDescriptor;
import de.gematik.ti.cardreader.provider.api.entities.ProviderDescriptor;
import de.gematik.ti.cardreader.provider.spi.ICardReaderControllerProvider;

/**
 * include::{userguide}/UTACCRP_Overview.adoc[tag=TactivoCardReaderProvider]
 */
public class TactivoCardReaderProvider implements ICardReaderControllerProvider {
    private final ProviderDescriptor providerDescriptor;

    /**
     * Constructor
     */
    public TactivoCardReaderProvider() {
        providerDescriptor = new ProviderDescriptor("Gematik Tactivo-Provider");
        providerDescriptor.setClassName(this.getClass().toString());
        providerDescriptor.setDescription("This Provider makes Tactivo Cardreader available.");
        providerDescriptor.setLicense("Gematik internernal use only, details tbd");
    }

    /**
     * Returns an instance of TactivoCardReaderController.class
     *
     * @return TactivoCardReaderController.getInstance()
     */
    @Override
    public ICardReaderController getCardReaderController() {
        return TactivoCardReaderController.getInstance();
    }

    /**
     * Returns the Providerdesciptor with short information about the Tactivo USB Provider
     *
     * @return Providerdesciptor
     */
    @Override
    public IProviderDescriptor getDescriptor() {
        return providerDescriptor;
    }
}
